--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -77,7 +77,7 @@
   .ad-title {
     font-family: "Playfair Display", serif;
     font-weight: 700;
-    font-size: 22px;
+    font-size: 1.2rem;
     margin-left: 20px;
     margin-top: 15px;
     margin-bottom: 30px;
@@ -159,7 +159,9 @@
     padding-top: 60px;
     padding-bottom: 100px;
   }
-  
+  .disabled{
+    opacity: 0.8;
+  }
   .re-heading {
     font-weight: 900;
     font-size: 75px;
@@ -259,7 +261,7 @@
   
   @media only screen and (max-width: 443px) {
     .ad {
-      max-width: 150px;
+      max-width: 200px;
       margin: 10px 5px;
     }
   
@@ -326,7 +328,7 @@
   
   @media only screen and (max-width: 283px) {
     .ad {
-      max-width: 100px;
+      max-width: 200px;
       margin: 10px 5px;
     }
   
