--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -270,8 +270,8 @@
       color: #000;
       font-size: 19px;
   
-      padding: 0px 5px;
-      margin: 15px 0px 15px 10px;
+      padding: 0px 5px; 
+      margin: auto;
     }
   
     .ad-adress {
