center squarefeet cat

--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -304,7 +304,7 @@
       font-size: 17px;
   
       padding: 0px 5px;
-      margin: 15px 0px 15px 10px;
+      margin: auto;
     }
   
     .ad-adress {
