--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
    <nav class="navbar">
       <div class="container nav-wrapper">
         <div class="nav-logo">
-          <a href="#" style="text-decoration: none">
+          <a [routerLink]="['/']"  style="text-decoration: none">
             <img src="../../assets/TVIKO – kopija (1) 2.png" alt="navLogo" />
           </a>
         </div>
