--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -48,8 +48,8 @@
      </div>
       <div class="container">
         <div class="next-prev">
-          <button class="prev page-btn" (click)="nextPage()" >Prethodno</button>
-          <button class="next page-btn" (click)="previousPage()">Sledeće</button>
+          <button class="prev page-btn" (click)="previousPage()" >Prethodno</button>
+          <button class="next page-btn" (click)="nextPage()">Sledeće</button>
         </div>
       </div>
     </div>
