--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -8,7 +8,7 @@
    
   </main>
   <app-divider></app-divider>
-  <div class="container" *ngIf="ad !== undefined"> 
+  <div class="container d-none" *ngIf="ad !== undefined"> 
     <div class="row text-center m-4">
       
       <h1> {{ad.title}} </h1> 
@@ -40,69 +40,15 @@
   
           <div class="address">{{ad.adress}}</div>
   
-          <div class="socials" >
-            <a href="https://www.instagram.com/tvikotrebinje/">
-              <img src="../../assets/instagram (1).png" alt="instagram" />
-            </a>
-  
-            <a
-              href="https://www.facebook.com/tvikotrebinje/photos/?ref=page_internal&mt_nav=0&paipv=0&eav=AfZLNIf9x94UD5uqNEiYSArTScYKOxUpmZoqUf3FEkuBVFH_n-jHUZiD-6X6NnzUvCg&_rdr"
-            >
-              <img src="../../assets/facebook.png" alt="facebook" />
-            </a>
-  
-            <a href="#" class="wa">
-              <img src="../../assets/whatsap.png" height="32px" alt="whatsapp" />
-            </a>
-          </div>
+          
   
           <h2 class="number-of-rooms">{{ad.rooms}}</h2>
   
           <div class="floor">{{ad.stage}}</div>
         </div>
   
-        <div class="room-structure" *ngIf="ad.structure" >
-          <h3 class="str-h">Struktura soba</h3>
-          <div class="table">
-            <table>
-              <tr>
-                <th class="cell t-heading">Prostorije</th>
-                <th class="cell t-heading">Kvadratura</th>
-              </tr>
-              <tr>
-                <td class="cell row-lighter">Kuhinja</td>
-                <td class="cell row-lighter">{{ad.structure.kitchen}} m2</td>
-              </tr>
-              <tr>
-                <td class="cell row-darker">Dnevna soba</td>
-                <td class="cell row-darker">{{ad.structure.lRoom}} m2</td>
-              </tr>
-              <tr>
-                <td class="cell row-lighter">Spavaca soba</td>
-                <td class="cell row-lighter">{{ad.structure.Broom}} m2</td>
-              </tr>
-              <tr>
-                <td class="cell row-darker">Djecija soba</td>
-                <td class="cell row-darker">{{ad.structure.Kroom}} m2</td>
-              </tr>
-              <tr>
-                <td class="cell row-lighter">Kupatilo</td>
-                <td class="cell row-lighter">{{ad.structure.Btroom}} m2</td>
-              </tr>
-              <tr>
-                <td class="cell row-darker">Ukupno:</td>
-                <td class="cell row-darker">{{totalRooms()}} m2</td>
-              </tr>
-            </table>
-          </div>
-        </div>
       </div>
-      <div class="description" [ngClass]="{'longDescription' : isDescriptionLong() }" >
-        <h3 class="des-h">Opis:</h3>
-        <p class="description-text"> 
-            {{ad.description}}
-        </p>
-      </div>
+
     </div>
 
     <h2 class="co-h">
@@ -144,6 +90,82 @@
 
     
   
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="carrousel">
+          
+        </div>
+      </div>
+      <div class="col">
+        <div class="squarefeet m-0 text-nowrap" #myButton id="myButton">{{ad.squarefeet}} m2</div>
+        <div class="address ">{{ad.adress}}</div>
+        <div class="socials m-0 d-inline" >
+          <a href="https://www.instagram.com/tvikotrebinje/">
+            <img src="../../assets/instagram (1).png" alt="instagram"  />
+          </a>
+
+          <a
+            href="https://www.facebook.com/tvikotrebinje/photos/?ref=page_internal&mt_nav=0&paipv=0&eav=AfZLNIf9x94UD5uqNEiYSArTScYKOxUpmZoqUf3FEkuBVFH_n-jHUZiD-6X6NnzUvCg&_rdr"
+          >
+            <img src="../../assets/facebook.png" alt="facebook" />
+          </a>
+
+          <a href="#" class="wa">
+            <img src="../../assets/whatsap.png" height="32px" alt="whatsapp" />
+          </a>
+        </div>
+        
+        <h2 class="number-of-rooms my-2">{{ad.rooms}}</h2>
+        
+        <div class="floor">stage</div>
+        <div class="description" [ngClass]="{'longDescription' : isDescriptionLong() }" >
+          <h3 class="des-h">Opis:</h3>
+          <p class="description-text"> 
+              {{ad.description}}
+          </p>
+        </div>
+      </div>
+      <div class="col">
+
+        <div class="room-structure" *ngIf="ad.structure" >
+          <h3 class="str-h">Struktura soba</h3>
+          <div class="table">
+            <table>
+              <tr>
+                <th class="cell t-heading">Prostorije</th>
+                <th class="cell t-heading">Kvadratura</th>
+              </tr>
+              <tr>
+                <td class="cell row-lighter">Kuhinja</td>
+                <td class="cell row-lighter">{{ad.structure.kitchen}} m2</td>
+              </tr>
+              <tr>
+                <td class="cell row-darker">Dnevna soba</td>
+                <td class="cell row-darker">{{ad.structure.lRoom}} m2</td>
+              </tr>
+              <tr>
+                <td class="cell row-lighter">Spavaca soba</td>
+                <td class="cell row-lighter">{{ad.structure.Broom}} m2</td>
+              </tr>
+              <tr>
+                <td class="cell row-darker">Djecija soba</td>
+                <td class="cell row-darker">{{ad.structure.Kroom}} m2</td>
+              </tr>
+              <tr>
+                <td class="cell row-lighter">Kupatilo</td>
+                <td class="cell row-lighter">{{ad.structure.Btroom}} m2</td>
+              </tr>
+              <tr>
+                <td class="cell row-darker">Ukupno:</td>
+                <td class="cell row-darker">{{totalRooms()}} m2</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="look-all">
     <div class="container">
