--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -71,7 +71,7 @@
             <a class="social-cont" href="https://www.instagram.com/tvikotrebinje/"
               ><img src="../../assets/instagram (1).png" alt="insta"
             /></a>
-            <a class="social-cont"
+            <a class="social-cont" href="https://api.whatsapp.com/send/?phone=38765379162&text&type=phone_number&app_absent=0"
               ><img src="../../assets/whatsap.png" height="36" alt="wa"
             /></a>
           </div>
@@ -135,12 +135,7 @@
         <h2 class="number-of-rooms my-2 mx-auto text-center">{{ad.rooms}}</h2>
         
         <div class="floor">{{ad.floor}}</div>
-        <div class="description">
-          <h3 class="des-h">Opis:</h3>
-          <p class="description-text">
-            {{ad.description}}
-          </p>
-        </div>
+  
       </div>
       <div class="col col-12-sm"  *ngIf="ad.structure" >
 
@@ -178,6 +173,16 @@
               </tr>
             </table>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="w-100 mx-auto">
+        <div class="description">
+          <h3 class="des-h">Opis:</h3>
+          <p class="description-text">
+            {{ad.description}}
+          </p>
         </div>
       </div>
     </div>
