--- a/src/app/ad-infos/ad-infos.component.css
+++ b/src/app/ad-infos/ad-infos.component.css
@@ -9,6 +9,7 @@ main{
   margin-left: 20px;
   margin-right: 20px;
   max-width: 500px;
+  
 }
 
 .imgSlide{   
@@ -227,7 +228,7 @@ main{
     letter-spacing: 1px;
     border: 2px solid #cb8b53;
     text-align: center;
-    max-width: 90%; 
+    max-width: 45%; 
   }
   
   .floor {
@@ -258,6 +259,7 @@ main{
   
   table {
     border-spacing: 7px;
+    margin: auto!important;
   }
   
   .des-h {
@@ -434,6 +436,7 @@ main{
     .number-of-rooms {
       font-size: 13px;
       display: flex;
+      max-width: 80%;
       justify-content: center; 
       word-wrap: break-word;
       flex-wrap: wrap;
@@ -510,6 +513,12 @@ main{
   }
   
   @media only screen and (max-width: 550px) {
+    .table{
+      margin-top: 100px;
+    }
+    .infosBS{
+      margin-top: 100px!important;
+    }
     .ad-info-wrapper {
       display: block;
     }
@@ -661,9 +670,6 @@ main{
     width: 70%;
   }
  
-  gallery{
-    background-color: transparent;
-  }
   .g-dot-inner{
     background-color: grey!important;
   }
