--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -23,78 +23,11 @@
         </div>
     </div>
 </div>
-  <div class="container d-none" *ngIf="ad !== undefined"> 
-    <div class="row text-center m-4">
-      
-      <h1> {{ad.title}} </h1> 
-    </div>
-    <div class="ad-info-wrapper">
-  
- 
-      <div class="gallery " #target > 
-        <gallery    (itemClick)="itemClicked('ok')" class="background-color:transparent"   [items]="slidesStore" ></gallery>
-     
-      </div>
-      <div class="onlyMobile">
-        <div class="info text-center">
-          <div class="squarefeet" #myButton id="myButton">{{ad.squarefeet}} m2</div>
-  
-          <div class="address">{{ad.adress}}</div>
-  
-          
-  
-          <h2 class="number-of-rooms">{{ad.rooms}}</h2>
-  
-          <div class="floor">{{ad.stage}}</div>
-        </div>
-  
-      </div>
-
-    </div>
-
-    <h2 class="co-h">
-      Kontaktirajte nas sada i saznajte <br> više o ovoj nekretnini!
-    </h2>
-
-    <div class="contact-infos-wrapper">
-     
-          <div>
-            <h4 class="info-h">KONTAKT TELEFON</h4> 
-            <p class="info-text">+387 (0)66 940 924</p>
-          </div>
-
-          <div>
-            <h4 class="info-h">DRUŠTVENE MREŽE</h4>
-            <a class="social-cont" href="https://www.facebook.com/tvikotrebinje/photos/?ref=page_internal&mt_nav=0&paipv=0&eav=AfZLNIf9x94UD5uqNEiYSArTScYKOxUpmZoqUf3FEkuBVFH_n-jHUZiD-6X6NnzUvCg&_rdr"
-              ><img src="../../assets/facebook.png" alt="fb"
-            /></a>
-            <a class="social-cont" href="https://www.instagram.com/tvikotrebinje/"
-              ><img src="../../assets/instagram (1).png" alt="insta"
-            /></a>
-            <a class="social-cont" href="https://api.whatsapp.com/send/?phone=38765379162&text&type=phone_number&app_absent=0"
-              ><img src="../../assets/whatsap.png" height="36" alt="wa"
-            /></a>
-          </div>
-
-          <div>
-            <h4 class="info-h">KONTAKT TELEFON</h4>
-            <p class="info-text">Radnim danima: 07:00 - 14:00</p> 
-          </div>
-      
-    </div>
-
-    <a  [routerLink]="['/contact']" class="action-btn text-decoration-none"  style="margin-top: 70px
-    ">
-      JAVITE NAM SE PUTEM EMAILA <img src="../../assets/arrow.png" alt="arrow" />
-  </a>
-
-
-    
-  
-  </div>
-  
   <div class="container">
-  
+  <div class="row text-center my-4">
+
+    <h1> {{ad.title}} </h1> 
+  </div>
     <div class="row"> 
       
       <div class="CostumCarousel">
@@ -114,7 +47,7 @@
     
        
       <div class="col mx-auto text-center my-2 infosBS">
-        <div class="squarefeet   text-nowrap" #myButton id="myButton">{{ad.squarefeet}} m2</div>
+        <div class="squarefeet   text-nowrap"  *ngIf="ad.squarefeet" #myButton id="myButton">{{ad.squarefeet}} m2</div>
         <div class="address ">{{ad.adress}}</div>
         <div class="socials m-0 d-inline" >
           <a href="https://www.instagram.com/tvikotrebinje/">
@@ -132,7 +65,7 @@
           </a>
         </div>
         
-        <h2 class="number-of-rooms my-2 mx-auto text-center">{{ad.rooms}}</h2>
+        <h2 class="number-of-rooms my-2 mx-auto text-center"  *ngIf="ad.rooms" >{{ad.rooms}}</h2>
         
         <div class="floor">{{ad.floor}}</div>
   
