--- a/src/app/ads/ads.component.css
+++ b/src/app/ads/ads.component.css
@@ -158,7 +158,9 @@
 
     margin: 10px 5px;
   }
-
+  #title{
+    font-size: 17px!important ;
+  }
   .square-feet-num {
     color: #000;
     font-size: 22px;
