--- a/src/app/ads/ads.component.html
+++ b/src/app/ads/ads.component.html
@@ -36,7 +36,7 @@
               alt="ad-photo"
             />
 
-            <div class=" ad-adress text-nowrap">{{shortAdress(ad2.title)}}</div>
+            <div class=" ad-adress text-nowrap" id="title" >{{shortAdress(ad2.title)}}</div>
             <div class="square-feet-num">{{ad2.squarefeet}} m2</div>
             <div class=" ad-adress text-nowrap">{{shortAdress(ad2.adress)}}</div>
           </a>
