--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -244,7 +244,9 @@
       padding: 0px 5px;
       margin: 15px 0px 15px 20px;
     }
-  
+    #title{
+      font-size: 17px!important ;
+    }
     .ad-adress {
       font-size: 14px;
       margin-left: 20px;
