--- a/src/app/ad-infos/ad-infos.component.css
+++ b/src/app/ad-infos/ad-infos.component.css
@@ -11,7 +11,10 @@ main{
   max-width: 500px;
   
 }
+.sansSerif{
 
+  font-family: sans-serif;
+}
 .imgSlide{   
   height: 100px; 
   display: block!important;
