--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -43,14 +43,19 @@
           </a>
         </div>
 
-     <div class="row">
-     
-     </div>
+   
       <div class="container">
+
+         
         <div class="next-prev">
+          
           <button class="prev page-btn" (click)="previousPage()" >Prethodno</button>
+          
           <button class="next page-btn" (click)="nextPage()">Sledeće</button>
+          
         </div>
+            
+        <h1 class="text-center" > Page : {{currentPage}}</h1>
       </div>
     </div>
   </div>
