--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -55,7 +55,7 @@
           
         </div>
             
-        <h1 class="text-center" > Page : {{currentPage}}</h1>
+        <h1 class="text-center" > Stranica : {{currentPage}}</h1>
       </div>
     </div>
   </div>
