--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -120,40 +120,42 @@
       </div>
     </div>
   </div>
-   <div class="row ">
-    <div class="contact-infos-wrapper mx-auto w-75">
-       
-      <div>
-        <h4 class="info-h">KONTAKT TELEFON</h4>
-        <p class="info-text">+387 (0)65 379 162</p> 
-      </div>
-
-      <div>
-        <h4 class="info-h">DRUŠTVENE MREŽE</h4>
-        <div class="socials mx-auto d-inline" >
-          <a href="https://www.instagram.com/tvikotrebinje/">
-            <img src="../../assets/instagram (1).png" alt="instagram"  />
-          </a>
-
-          <a
-            href="https://www.facebook.com/tvikotrebinje/photos/?ref=page_internal&mt_nav=0&paipv=0&eav=AfZLNIf9x94UD5uqNEiYSArTScYKOxUpmZoqUf3FEkuBVFH_n-jHUZiD-6X6NnzUvCg&_rdr"
-          >
-            <img src="../../assets/facebook.png" alt="facebook" />
-          </a>
-
-          <a href="#" class="wa"  href="https://api.whatsapp.com/send/?phone=38765379162&text&type=phone_number&app_absent=0">
-            <img src="../../assets/whatsap.png"  height="32px" alt="whatsapp" />
-          </a>
+  <div class="container">
+    <div class="row ">
+      <div class="contact-infos-wrapper mx-auto w-75">
+         
+        <div>
+          <h4 class="info-h">KONTAKT TELEFON</h4>
+          <p class="info-text">+387 (0)65 379 162</p> 
         </div>
-          </div>
-
-      <div>
-        <h4 class="info-h">KONTAKT TELEFON</h4>
-        <p class="info-text">Radnim danima: 07:00 - 16:00</p> 
-      </div>
   
-</div>
-   </div>
+        <div>
+          <h4 class="info-h">DRUŠTVENE MREŽE</h4>
+          <div class="socials mx-auto d-inline" >
+            <a href="https://www.instagram.com/tvikotrebinje/">
+              <img src="../../assets/instagram (1).png" alt="instagram"  />
+            </a>
+  
+            <a
+              href="https://www.facebook.com/tvikotrebinje/photos/?ref=page_internal&mt_nav=0&paipv=0&eav=AfZLNIf9x94UD5uqNEiYSArTScYKOxUpmZoqUf3FEkuBVFH_n-jHUZiD-6X6NnzUvCg&_rdr"
+            >
+              <img src="../../assets/facebook.png" alt="facebook" />
+            </a>
+  
+            <a href="#" class="wa"  href="https://api.whatsapp.com/send/?phone=38765379162&text&type=phone_number&app_absent=0">
+              <img src="../../assets/whatsap.png"  height="32px" alt="whatsapp" />
+            </a>
+          </div>
+            </div>
+  
+        <div>
+          <h4 class="info-h">KONTAKT TELEFON</h4>
+          <p class="info-text">Radnim danima: 07:00 - 14:00</p> 
+        </div>
+    
+  </div>
+     </div>
+  </div>
   <div class="look-all">
     <div class="container">
 
