--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -122,7 +122,7 @@
   </div>
   <div class="container">
     <div class="row ">
-      <div class="contact-infos-wrapper mx-auto w-75">
+      <div class="contact-infos-wrapper mx-auto p-5 w-100">
          
         <div>
           <h4 class="info-h">KONTAKT TELEFON</h4>
@@ -149,7 +149,7 @@
             </div>
   
         <div>
-          <h4 class="info-h">KONTAKT TELEFON</h4>
+          <h4 class="info-h">RADNO VRIJEME</h4>
           <p class="info-text">Radnim danima: 07:00 - 14:00</p> 
         </div>
     
