--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 </div>
-  <div class="container">
+  <div class="container" *ngIf="isFetched">
   <div class="row text-center my-4">
 
     <h1> {{ad.title}} </h1> 
@@ -120,7 +120,7 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="container" *ngIf="isFetched">
     <div class="row ">
       <div class="contact-infos-wrapper mx-auto p-5 w-100">
          
@@ -156,7 +156,7 @@
   </div>
      </div>
   </div>
-  <div class="look-all">
+  <div class="look-all" *ngIf="isFetched">
     <div class="container">
 
       <h2 class="look-all-heading">POGLEDAJTE SVE NEKRETNINE</h2>
