--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -1,3 +1,4 @@
+ <app-spinner   *ngIf="loader" ></app-spinner>
 <main>
     <div class="wrap"></div> 
   
@@ -30,7 +31,7 @@
   </div>
     <div class="row"> 
       
-      <div class="CostumCarousel">
+      <div class="CostumCarousel"  >
         <owl-carousel-o [options]="customOptions"  >
       
           <ng-container *ngFor="let slide of images">
@@ -169,6 +170,6 @@
     <img src="../../assets/left-back.png" alt="back-img2" class="left-back">
   </div>
  
- 
+
   <app-footer></app-footer>
  
