--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -42,9 +42,22 @@
           </div>
         </div>
       </div>
-    
+      <div class="row numbers">
+        <div class="col">
+          <h1>25</h1>
+          <h2>Godina postojanja</h2>
+        </div>
+        <div class="col">
+          <h1>30+</h1>
+          <h2>Različitih gradova</h2>
+        </div>
+        <div class="col">
+          <h1>100+</h1>
+          <h2>Nekretnina</h2>
+        </div>
+      </div>
     <div class="container-fluid mt-5 px-4">
-        
+     
         <div class="row">
             <h2>MJESTO GDJE NAS MOŽETE PRONAĆI</h2>
         </div>
